discussion/kv_engine/177335/177335_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Expiry should not be free

Change-Id: I5c25d189dc73b8b213b7687e83a3e8df7177cd3c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-11 09:39:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-11 10:28:37.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18915/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_document_iface.h:86:41: error: unknown type name "EngineIface" [clang-diagnostic-error]
    virtual void document_expired(const EngineIface& engine, size_t nbytes) = 0;
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18915/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_document_iface.h:86:41:
error: unknown type name "EngineIface" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18915/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21863/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-07-11T10:28:04.580Z] unknown file: Failure
[2022-07-11T10:28:04.580Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response" thrown in the test body.
[2022-07-11T10:28:04.580Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (2055 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21863/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18072/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47735/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40097/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29214/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8696/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20058/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8599/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21174/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20816/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
